--- a/app/views/deals/_body_most_reviewed.html.erb
+++ b/app/views/deals/_body_most_reviewed.html.erb
@@ -1,15 +1,3 @@
-<!-- <div class="filter-node promotion_box" data-filter='["Category","Promotions_Title"]'>
-  <a target="_blank" href="Promotions_URL"><img src="Image_URL" alt="Img_descriptions"></a>
-  <div class="rating"><img src="<%= asset_path 'star-Rating_Num.jpg' %>"><p>Review_Num Amazon Reviews</p></div>
-  <div class="node-box inner">
-    <h2><a target="_blank" href="Promotions_URL">Promotions_Title</a></h2>
-    <p>Promotions_Descriptions</p>
-    <em>COUPON CODE: Promotion_Code</em><span>End Date: End_date</span>
-  </div>
-  <div class="btn"><a target="_blank" href="Promotions_URL">Discover More</a></div>
-</div>
- -->
-
 <!-- <div class="filter-node editors_box" data-filter='["CATEGORIES","PRODUCT_TITLE"]'>
   <a target="_blank" href="MOSTREVIEW_URL"><img src="IMAGE_URL" alt="IAMGE_DESC"></a>
   <div class="rating"><p>REVIEWS_NUMBER + Amazon Reviews</p></div>
@@ -23,7 +11,81 @@
   <div class="btn"><a target="_blank" href="MOSTREVIEW_URL">Shop Now</a></div>
 </div> -->
 
- <!-- Categories : 30k, 20k, 10k, 5k, 1k -->
+<!-- <div class="filter-node promotion_box" data-filter='["Category","Promotions_Title"]'>
+  <a target="_blank" href="Promotions_URL"><img src="Image_URL" alt="Img_descriptions"></a>
+  <div class="rating"><img src="<%= asset_path 'star-Rating_Num.jpg' %>"><p>Review_Num Amazon Reviews</p></div>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="Promotions_URL">Promotions_Title</a></h2>
+    <p>Promotions_Descriptions</p>
+    <em>COUPON CODE: Promotion_Code</em><span>End Date: End_date</span>
+  </div>
+  <div class="btn"><a target="_blank" href="Promotions_URL">Discover More</a></div>
+</div>
+ -->
+
+
+<!-- Categories : 30k, 20k, 10k, 5k, 1k -->
+<div class="filter-node editors_box" data-filter='["5k","Cali White ACTIVATED CHARCOAL & ORGANIC COCONUT OIL TEETH WHITENING TOOTHPASTE"]'>
+  <a target="_blank" href="https://amzn.to/31wtoCa"><img src="https://images-na.ssl-images-amazon.com/images/I/71nFRyRtOYL._SX522_.jpg" alt="Cali White ACTIVATED CHARCOAL"></a>
+  <div class="rating"><p>7K + Amazon Reviews</p></div>
+  <div class="node-box inner">
+    <p><a target="_blank" href="https://amzn.to/31wtoCa">Cali White ACTIVATED CHARCOAL & ORGANIC COCONUT OIL TEETH WHITENING TOOTHPASTE,...</a></p>
+  </div>
+  <div class="pricing">
+    <span>$9.46</span>
+    <span class="sec_pricing"><div class="line_style">$19.99</div><em>53% off</em></span>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/31wtoCa">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box" data-filter='["10k","Coop Home Goods - Premium Adjustable Loft Pillow - Hypoallergenic Cross-Cut Memory Foam Fill"]'>
+  <a target="_blank" href="https://amzn.to/2KuSLi9"><img src="https://images-na.ssl-images-amazon.com/images/I/61ur0tW58JL._SX679_.jpg" alt="Coop Home Goods"></a>
+  <div class="rating"><p>16K + Amazon Reviews</p></div>
+  <div class="node-box inner">
+    <p><a target="_blank" href="https://amzn.to/2KuSLi9">Coop Home Goods - Premium Adjustable Loft Pillow - Hypoallergenic Cross-Cut Memory Foam Fill...</a></p>
+  </div>
+  <div class="pricing">
+    <span>$59.99</span>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2KuSLi9">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box" data-filter='["30k","Mellanni Bed Sheet Set - Brushed Microfiber 1800 Bedding - Wrinkle, Fade, Stain Resistant"]'>
+  <a target="_blank" href="https://amzn.to/2YZ9Ftd"><img src="https://images-na.ssl-images-amazon.com/images/I/61rjc2b68QL._SX522_.jpg" alt="Mellanni Bed Sheet Set"></a>
+  <div class="rating"><p>58K + Amazon Reviews</p></div>
+  <div class="node-box inner">
+    <p><a target="_blank" href="https://amzn.to/2YZ9Ftd">Mellanni Bed Sheet Set - Brushed Microfiber 1800 Bedding - Wrinkle, Fade, Stain Resistant...</a></p>
+  </div>
+  <div class="pricing">
+    <span>$24.97</span>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2YZ9Ftd">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box" data-filter='["10k","Baebody Eye Gel for Appearance of Dark Circles, Puffiness, Wrinkles and Bags"]'>
+  <a target="_blank" href="https://amzn.to/2YJ3G0j"><img src="https://images-na.ssl-images-amazon.com/images/I/71i-3AIeXcL._SY679_.jpg" alt="Baebody Eye Gel"></a>
+  <div class="rating"><p>14K + Amazon Reviews</p></div>
+  <div class="node-box inner">
+    <p><a target="_blank" href="https://amzn.to/2YJ3G0j">Baebody Eye Gel for Appearance of Dark Circles, Puffiness, Wrinkles and Bags...</a></p>
+  </div>
+  <div class="pricing">
+    <span>$24.95</span>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2YJ3G0j">Shop Now</a></div>
+</div>
+
+<div class="filter-node editors_box" data-filter='["30k","Infant Optics DXR-8 Video Baby Monitor with Interchangeable Optical Lens"]'>
+  <a target="_blank" href="https://amzn.to/31AO0ZQ"><img src="https://images-na.ssl-images-amazon.com/images/I/61TfCqsL6SL._SX522_.jpg" alt="Infant Optics DXR-8 Video Baby Monitor"></a>
+  <div class="rating"><p>31K + Amazon Reviews</p></div>
+  <div class="node-box inner">
+    <p><a target="_blank" href="https://amzn.to/31AO0ZQ">Infant Optics DXR-8 Video Baby Monitor with Interchangeable Optical Lens</a></p>
+  </div>
+  <div class="pricing">
+    <span>$165.00</span>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/31AO0ZQ">Shop Now</a></div>
+</div>
+
 <div class="filter-node editors_box" data-filter='["5k","SCOSCHE MAG12VB MagicMount Magnetic Phone/GPS Power Outlet Mount for the Car in Frustration Free Packaging"]'>
   <a target="_blank" href="https://amzn.to/2KsZZmU"><img src="https://images-na.ssl-images-amazon.com/images/I/61uBBnFWCYL._SX679_.jpg" alt="SCOSCHE Magnetic Phone/GPS Power Outlet Mount"></a>
   <div class="rating"><p>5K + Amazon Reviews</p></div>
@@ -50,43 +112,41 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2ySR6MA">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["CATEGORIES","PRODUCT_TITLE"]'>
-  <a target="_blank" href="MOSTREVIEW_URL"><img src="IMAGE_URL" alt="IAMGE_DESC"></a>
-  <div class="rating"><p>REVIEWS_NUMBER + Amazon Reviews</p></div>
+<div class="filter-node editors_box" data-filter='["20k","VideoSecu ML531BE TV Wall Mount for Most 27"-55" LED LCD Plasma Flat Screen Monitor up to 88 lb VESA 400x400"]'>
+  <a target="_blank" href="https://amzn.to/2YHcHqT"><img src="https://images-na.ssl-images-amazon.com/images/I/51bnQ0FC01L.jpg" alt="VideoSecu ML531BE TV Wall Mount"></a>
+  <div class="rating"><p>27K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="MOSTREVIEW_URL">PRODUCT_TITLE</a></p>
+    <p><a target="_blank" href="https://amzn.to/2YHcHqT">VideoSecu ML531BE TV Wall Mount for Most 27"-55" LED LCD Plasma Flat Screen Monitor up to 88 lb VESA 400x400...</a></p>
   </div>
   <div class="pricing">
-    <span>$CURRENT_PRICE</span>
-    <span class="sec_pricing"><div class="line_style">$REGULAR_PRICE</div><em>PERCENTAGE% off</em></span>
+    <span>$26.99</span>
   </div>
-  <div class="btn"><a target="_blank" href="MOSTREVIEW_URL">Shop Now</a></div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2YHcHqT">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["CATEGORIES","PRODUCT_TITLE"]'>
-  <a target="_blank" href="MOSTREVIEW_URL"><img src="IMAGE_URL" alt="IAMGE_DESC"></a>
-  <div class="rating"><p>REVIEWS_NUMBER + Amazon Reviews</p></div>
+<div class="filter-node editors_box" data-filter='["10k","Waterpik Water Flosser Electric Dental Countertop Oral Irrigator For Teeth"]'>
+  <a target="_blank" href="https://amzn.to/2Z0PGuf"><img src="https://images-na.ssl-images-amazon.com/images/I/61J%2B4PTi85L._SX522_.jpg" alt="Waterpik Water Flosser"></a>
+  <div class="rating"><p>15K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="MOSTREVIEW_URL">PRODUCT_TITLE</a></p>
+    <p><a target="_blank" href="https://amzn.to/2Z0PGuf">Waterpik Water Flosser Electric Dental Countertop Oral Irrigator For Teeth...</a></p>
   </div>
   <div class="pricing">
-    <span>$CURRENT_PRICE</span>
-    <span class="sec_pricing"><div class="line_style">$REGULAR_PRICE</div><em>PERCENTAGE% off</em></span>
+    <span>$59.99</span>
+    <span class="sec_pricing"><div class="line_style">$89.99</div><em>33% off</em></span>
   </div>
-  <div class="btn"><a target="_blank" href="MOSTREVIEW_URL">Shop Now</a></div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2Z0PGuf">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["CATEGORIES","PRODUCT_TITLE"]'>
-  <a target="_blank" href="MOSTREVIEW_URL"><img src="IMAGE_URL" alt="IAMGE_DESC"></a>
-  <div class="rating"><p>REVIEWS_NUMBER + Amazon Reviews</p></div>
+<div class="filter-node editors_box" data-filter='["20k","Active Wow Natural Charcoal Teeth Whitening Kit"]'>
+  <a target="_blank" href="https://amzn.to/31ACxtA"><img src="https://images-na.ssl-images-amazon.com/images/I/81n8gNAeUZL._SX522_.jpg" alt="Active Wow Natural Charcoal Teeth Whitening Kit"></a>
+  <div class="rating"><p>20K + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <p><a target="_blank" href="MOSTREVIEW_URL">PRODUCT_TITLE</a></p>
+    <p><a target="_blank" href="https://amzn.to/31ACxtA">Active Wow Natural Charcoal Teeth Whitening Kit</a></p>
   </div>
   <div class="pricing">
-    <span>$CURRENT_PRICE</span>
-    <span class="sec_pricing"><div class="line_style">$REGULAR_PRICE</div><em>PERCENTAGE% off</em></span>
+    <span>$39.99</span>
   </div>
-  <div class="btn"><a target="_blank" href="MOSTREVIEW_URL">Shop Now</a></div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/31ACxtA">Shop Now</a></div>
 </div>
 
 <div class="filter-node editors_box" data-filter='["30k","Mellanni Bed Sheet Set - Brushed Microfiber 1800 Bedding - Wrinkle, Fade, Stain Resistant - Hypoallergenic"]'>
