--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -29,7 +29,6 @@
 </div>
 -->
 
-
 <!-- <div class="card clearfix" data-score="percentage" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
@@ -50,6 +49,187 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="50" data-price="18.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YIHjYJ"><img src="https://m.media-amazon.com/images/I/71Gq4Uv77RL._SR400,400_.jpg" alt="Peptide Complex Serum" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YIHjYJ">Peptide Complex Serum by Microderm GLO, Best Anti Aging, Wrinkle, Facial Care, 100% PURE & NATURAL, Plump, Hydrate & Nourish Your Face,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.00</span><span class="ori_price">$35.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">50PEPTIDE</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $35.99</strong> with promo code: <strong class="m_codes">50PEPTIDE</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 14, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YIHjYJ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H1G645"><img src="https://m.media-amazon.com/images/I/61qS5FRu11L._SR400,400_.jpg" alt="ELECDER D10 True Wireless Earbuds" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H1G645">ELECDER D10 True Wireless Earbuds Bluetooth 5.0 Headphones in Ear with Microphone, 3D Stereo Sound, Charging Case ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">50GFTNGE</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $29.99</strong> with promo code: <strong class="m_codes">50GFTNGE</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 16, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2H1G645">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="48" data-price="19.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H0PRQ7"><img src="https://m.media-amazon.com/images/I/51CGO4qy2oL._SR400,400_.jpg" alt="JAYJUN Official Intensive Shining Mask" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>48% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H0PRQ7">JAYJUN Official Intensive Shining Mask 25ml / 0.84 fl.oz. Pack of 10 </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.50</span><span class="ori_price">$37.50</span></address>
+      <textarea readonly="readonly" class="code_area">48JAYJUN</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>48% off at $37.50</strong> with promo code: <strong class="m_codes">48JAYJUN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 13, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2H0PRQ7">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="16.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HfYwyj"><img src="https://m.media-amazon.com/images/I/61nhKWV5GQL._SR400,400_.jpg" alt="Bluetooth Headphones" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HfYwyj">Bluetooth Headphones WEILIGU Wireless Earbuds Waterproof Sweatproof Sports HD Stereo Noise Cancelling Headphones</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.19</span><span class="ori_price">$26.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">40OL3G2A</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $26.99</strong> with promo code: <strong class="m_codes">40OL3G2A</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 16, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2HfYwyj">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="7.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2TsctxD"><img src="https://m.media-amazon.com/images/I/81Fl1GuyiBL._SR400,400_.jpg" alt="dealz frenzy Insulated Tumbler" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2TsctxD">dealz frenzy Insulated Tumbler-Double Wall Stainless Steel Travel Coffee Mug with Lid,Thermo Cup BPA Free...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.50</span><span class="ori_price">$14.99</span></address>
+      <textarea readonly="readonly" class="code_area">50EQDK6R</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $14.99</strong> with promo code: <strong class="m_codes">50EQDK6R</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2TsctxD">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="16.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H2kbtA"><img src="https://m.media-amazon.com/images/I/51iBIs6+CtL._SR400,400_.jpg" alt="LOBKIN Bathroom Shelf Durable Aluminum " /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H2kbtA">LOBKIN Bathroom Shelf Durable Aluminum 2 Tiers Shower Shelf Adhesive Corner Shelf Storage, Organizer for Kitchen...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.00</span><span class="ori_price">$39.99</span></address>
+      <textarea readonly="readonly" class="code_area">60LNLISR</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $39.99</strong> with promo code: <strong class="m_codes">60LNLISR</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 12, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2H2kbtA">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="61" data-price="24.96">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YWMZda"><img src="https://m.media-amazon.com/images/I/61DT008lI-L._SR400,400_.jpg" alt="Portable Single Serve Coffee Maker" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>61% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YWMZda">Portable Single Serve Coffee Maker, 2 in 1 Coffee Machine for for Most Single Cup Pods including K-Cup Pods, With Reusable K Cup...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$24.96</span><span class="ori_price">$63.99</span></address>
+      <textarea readonly="readonly" class="code_area">61C3HP7E</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>61% off at $63.99</strong> with promo code: <strong class="m_codes">61C3HP7E</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 13, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YWMZda">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="19.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KsDEpi"><img src="https://m.media-amazon.com/images/I/71e8R3yKFFL._SR400,400_.jpg" alt="Hot Air Brush and Volumizer" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KsDEpi">Hot Air Brush and Volumizer, One Step Straightener and Dryer, Professional Salon Styling with Ionic Technology, ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.00</span><span class="ori_price">$37.99</span></address>
+      <textarea readonly="readonly" class="code_area">50U543JD</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $37.99</strong> with promo code: <strong class="m_codes">50U543JD</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 18, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KsDEpi">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="7.25">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KK5fkZ"><img src="https://m.media-amazon.com/images/I/61vIwiOqFML._SR400,400_.jpg" alt="NEWYES Robot pad 8.5 Inch LCD Writing Tablet" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KK5fkZ">NEWYES Robot pad 8.5 Inch LCD Writing Tablet Electronic Doodle Pad Drawing Board Gifts for Kids Office Writing Board with ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.25</span><span class="ori_price">$14.50</span></address>
+      <textarea readonly="readonly" class="code_area">50WNIKN2</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $14.50</strong> with promo code: <strong class="m_codes">50WNIKN2</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 15, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KK5fkZ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H1cN1C"><img src="https://m.media-amazon.com/images/I/515eoCQGqAL._SR400,400_.jpg" alt="Solar Garden Lights Outdoor" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H1cN1C">Solar Garden Lights Outdoor, 2 Pack Solar Powered Lights with 8 Lily Flower, Multi-Color Changing LED Solar Stake Lights for Garden,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.49</span><span class="ori_price">$18.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">50T1DE86</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $18.99</strong> with promo code: <strong class="m_codes">50T1DE86</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2H1cN1C">Use Code at Amazon</a></div>
+</div>
+ 
 <div class="card clearfix" data-score="50" data-price="9.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2H4oDIm"><img src="https://m.media-amazon.com/images/I/61-Y4OLtSIL._SR400,400_.jpg" alt="Fast Wireless Charger" /></a>
