--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -524,6 +524,7 @@
 .promotions .guide_controll{background:#000;}
 .promotions .guide_controll .btn{font-size:19px;margin:0 1%;color:#fff;}
 .promotions .guide_controll .form-control{margin:10px 0;width:300px;padding:5px;line-height:25px;}
+.promotions .guide_controll p{font-size:40px;color:#fff;}
 .promotions .promotion_box{float:left;width:31.3333%;height:450px;margin:0 1% 2% 1%;border:1px solid;position:relative;}
 .promotions .promotion_box .image_box{}
 .promotions .promotion_box img{width:100%;height:200px;margin-bottom:-15px;object-fit:cover;}
@@ -547,9 +548,11 @@
 
 @media screen and (max-width:640px){
   .promotions .guide_controll .btn{margin:0 2.8%;letter-spacing:1.3px;}
+  .promotions .promotion_box{margin:10px 0 35px 0;}
   .promotions .promotion_box .inner h2 a:hover{text-decoration:none;}
   .promotions .promotion_box{float:none;width:100%;margin-bottom:35px;}
-  .promotions .guide_controll .form-control{width:95%;margin:10px 2.5%;}
+  .promotions .guide_controll .form-control{width:95%;margin:10px 2.5%;display:none;}
+  .most_wrapper{margin-top:-25px;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .promotions .featured .sm_pc .guide_controll button{float:left;width:70px;line-height:35px;}
@@ -561,6 +564,7 @@
   .promotions .guide_controll .form-control{margin:3px 0 10px 0;width:100%;}
   .promotions .promotion_box .inner h2 a:hover{text-decoration:none;}
   .promotions .promotion_box{width:48%;}
+  .most_wrapper{margin-top:-25px;}
 }
 /* End Promotion */
 
