--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -424,6 +424,7 @@
 
 @media screen and (max-width:400px){
   .editors .editor_mobile .guide_controll .btn{font-size:14px;}
+  .editors .editor_mobile .guide_controll .more_btn{width:66px;}
   .editors_pick .editors_box .pricing span{font-size:12px;}
 }
 @media screen and (max-width:640px){
@@ -438,7 +439,7 @@
   .editors .editor_mobile .dropmenu{width:100px;}
   .editors .editor_mobile .dropmenu ul{margin-top:13px;} 
   .editors .editor_mobile .dropmenu ul li button{width:104px;margin:0 0 15px 10px;}
-  .editors .editor_mobile .dropmenu li{margin-top:-7px;}
+  .editors .editor_mobile .dropmenu li{margin-top:-5px;}
   .editors .editor_mobile .dropmenu li a{padding:0;margin:0;}
   .editors .editor_mobile .dropmenu li ul{left:-4px;width:150px;}
 }
