--- a/app/views/deals/_navbar_most_reviewed.html.erb
+++ b/app/views/deals/_navbar_most_reviewed.html.erb
@@ -27,7 +27,7 @@
       <button class="filter-button btn btn-md white-text" data-filter="30k">30,000 +</button>
       <button class="filter-button btn btn-md" data-filter="20k">20,000 +</button>
       
-      <ul class="dropmenu filter-button btn">
+      <ul class="dropmenu filter-button btn more_btn">
         <li class="dir"><a href="#">More</a>
           <ul>
             <li><button class="filter-button btn btn-md" data-filter="10k">10,000 +</button></li>
