--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -23,8 +23,8 @@
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.purple{background:#b400b4;}
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>em{display:block;padding:0 5px;margin-bottom:10px;}
 
-  .codes .most_categories .toggle>ul>li{width:30%;font-family: 'Anton', sans-serif;}
-  .codes .most_categories .toggle>ul>li>a{font-size:20px;font-weight:bold;}
+  .codes .most_categories .toggle>ul>li{width:30%;font-family: 'Anton', sans-serif;padding:8px 0 3px 0;}
+  .codes .most_categories .toggle>ul>li>a{font-size:20px;font-weight:bold;margin-top:-3px;}
   .codes .most_categories .toggle>ul>li>ul{padding:0;}
   .codes .most_categories .toggle>ul>li>ul>li{list-style:none;}
 
@@ -123,7 +123,7 @@
   .codes .lt_cnt .last7days_pc{display:none;}
 
   .codes .most_categories .toggle>ul>li{width:100%;font-family: 'Anton', sans-serif;}
-  .codes .most_categories .toggle>ul>li>a{font-size:20px;font-weight:bold;}
+  .codes .most_categories .toggle>ul>li>a{font-size:20px;font-weight:bold;margin-top:-3px;}
   .codes .most_categories .toggle>ul>li>ul{padding:0;}
   .codes .most_categories .toggle>ul>li>ul>li{list-style:none;}
   .codes .most_categories .toggle>ul>li>ul>li>a{background:none;color:#08f;padding:0;}
